--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "color": "^3.1.3",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.8.1",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.2.0",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
