--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,10 @@ target 'DCEC' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'DCECTests' do
     inherit! :complete
     # Pods for testing
