--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-sqlite-storage": "^5.0.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -34,6 +36,8 @@
     "@types/color": "^3.0.1",
     "@types/react": "^17.0.6",
     "@types/react-native": "^0.64.5",
+    "@types/react-native-sqlite-storage": "^5.0.0",
+    "@types/react-native-vector-icons": "^6.4.6",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
