--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "color": "^3.1.3",
+    "faker": "^5.5.3",
+    "lottie-react-native": "^5.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
@@ -34,6 +36,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/color": "^3.0.1",
+    "@types/faker": "^5.5.9",
     "@types/react": "^17.0.6",
     "@types/react-native": "^0.64.5",
     "@types/react-native-sqlite-storage": "^5.0.0",
