--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "@react-navigation/stack": "^5.14.5",
     "color": "^3.1.3",
     "faker": "^5.5.3",
-    "lottie-react-native": "^5.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.8.1",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "^2.2.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-webview": "^11.6.4"
+    "react-native-webview": "^11.6.4",
+    "react-navigation": "^4.4.4",
+    "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
