--- a/package.json
+++ b/package.json
@@ -14,19 +14,22 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/material-top-tabs": "^6.0.6",
+    "@react-navigation/native": "^6.0.1",
+    "@react-navigation/stack": "^6.0.1",
     "color": "^3.1.3",
     "faker": "^5.5.3",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "react-native-sqlite-storage": "^5.0.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.6.4",
     "react-navigation": "^4.4.4",
