--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^0.24.0",
     "color": "^3.1.3",
     "faker": "^5.5.3",
@@ -29,6 +30,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-sqlite-storage": "^5.0.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^8.1.0",
