--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.24.0",
     "color": "^3.1.3",
     "faker": "^5.5.3",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
