--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^13.0.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.2.4",
